# gateway/internal/transport/http/gateway/v1/auth.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"net/http"
 
+	authLoginUseCase "github.com/poymanov/codemania-task-board/gateway/internal/usecase/auth/login"
 	authRegisterUseCase "github.com/poymanov/codemania-task-board/gateway/internal/usecase/auth/register"
 	gatewayV1 "github.com/poymanov/codemania-task-board/shared/pkg/openapi/gateway/v1"
 	"github.com/rs/zerolog/log"
@@ -28,4 +29,24 @@ func (a *Api) AuthRegister(ctx context.Context, req *gatewayV1.RegisterRequestBo
 	}
 
 	return &gatewayV1.AuthRegisterCreated{}, nil
+}
+
+func (a *Api) AuthLogin(ctx context.Context, req *gatewayV1.LoginRequestBody) (gatewayV1.AuthLoginRes, error) {
+	dto := authLoginUseCase.LoginDTO{
+		Email:    req.GetEmail(),
+		Password: req.GetPassword(),
+	}
+
+	accessToken, err := a.authLoginUseCase.Login(ctx, dto)
+	if err != nil {
+		errMessage := "login failed"
+
+		log.Error().Err(err).Msg(errMessage)
+		return &gatewayV1.BadRequestError{
+			Code:    http.StatusBadRequest,
+			Message: errMessage,
+		}, nil
+	}
+
+	return &gatewayV1.LoginResponse{AccessToken: accessToken}, nil
 }
