# shared/pkg/openapi/gateway/v1/oas_request_encoders_gen.go
@@ -10,6 +10,20 @@ import (
 	ht "github.com/ogen-go/ogen/http"
 )
 
+func encodeAuthLoginRequest(
+	req *LoginRequestBody,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeAuthRegisterRequest(
 	req *RegisterRequestBody,
 	r *http.Request,
